<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".navigation.UserFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/account_iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile"
            tools:src="@drawable/profile_default_withtext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/linear_account_btn_follow_signout"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toRightOf="@id/account_iv_profile"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/ButtonFontCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/post" />

                <TextView
                    android:id="@+id/account_tv_post_count"
                    style="@style/ButtonFontCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    style="@style/ButtonFontCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/follower" />

                <TextView
                    android:id="@+id/account_tv_follower_count"
                    style="@style/ButtonFontCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    style="@style/ButtonFontCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/following" />

                <TextView
                    android:id="@+id/account_tv_following_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_0"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_account_btn_follow_signout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_toRightOf="@id/account_iv_profile"
            android:layout_above="@id/linear_btn_webpage_address">
            <Button
                android:id="@+id/account_btn_follow_signout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:text="@string/follow"
                android:theme="@style/ButtonStyle"
                style="@style/ButtonFontCustom"
                android:layout_toRightOf="@id/account_iv_profile"/>
            <Button
                android:id="@+id/account_btn_check_appversion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:visibility="visible"
                android:text="@string/version_check"
                android:theme="@style/ButtonStyle"
                style="@style/ButtonFontCustom"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_btn_webpage_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_toRightOf="@id/account_iv_profile"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/not_using_btn_until"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:text="@string/follow"
                android:visibility="gone"
                android:theme="@style/ButtonStyle"
                style="@style/ButtonFontCustom"
                android:layout_toRightOf="@id/account_iv_profile"/>
            <Button
                android:id="@+id/webpage_btn_guide_address"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:visibility="visible"
                android:text="@string/webpage_guide"
                android:theme="@style/ButtonStyle"
                style="@style/ButtonFontCustom"/>
        </LinearLayout>

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/account_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>