<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation.InfoFragment"
    >

    <ProgressBar
        android:id="@+id/progress_bar_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_info_title"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="28sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/editText_name_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="15"
                        android:hint="@string/insert_info_name"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/editText_relation_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="14"
                        android:hint="@string/insert_info_relation"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/editText_wordwannasay_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="18"
                        android:hint="@string/insert_info_word_wannasay"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_info_insert"
            android:theme="@style/ButtonStyle"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_info_submit" />

    </LinearLayout>

</FrameLayout>

